set(SRC_LIST1 calluserservice.cc ../user.pb.cc)
set(SRC_LIST2 callfriendservice.cc ../friend.pb.cc)
add_executable(user_service_consumer ${SRC_LIST1})
add_executable(friend_service_consumer ${SRC_LIST2})
target_link_libraries(user_service_consumer myrpc protobuf)
target_link_libraries(friend_service_consumer myrpc protobuf)